[gd_scene load_steps=12 format=2]

[ext_resource path="res://Script/Quiz/quiz.gd" type="Script" id=1]
[ext_resource path="res://assets/image/vintage-military-weapons-seamless-pattern/8.jpg" type="Texture" id=2]
[ext_resource path="res://fonts/Gugi-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 42
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=7]
size = 50
extra_spacing_top = 50
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )
ItemList/colors/font_color = Color( 0, 0, 0, 1 )
ItemList/colors/font_color_selected = Color( 0, 0.243137, 0.976471, 1 )
ItemList/colors/guide_color = Color( 0.8, 0.8, 0.8, 0 )
ItemList/styles/bg = SubResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 42
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = -4.0
margin_right = 5000.0
margin_bottom = 4996.0
texture = ExtResource( 2 )

[node name="CheckBox" type="CheckBox" parent="."]
visible = false
margin_right = 24.0
margin_bottom = 24.0

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 51.0
margin_top = 64.0
margin_right = 913.0
margin_bottom = 1188.0
color = Color( 1, 1, 1, 0.470588 )

[node name="questionaire" type="VBoxContainer" parent="."]
visible = false
margin_left = 62.0
margin_top = 218.0
margin_right = 904.0
margin_bottom = 618.0

[node name="Q1" type="Node2D" parent="questionaire"]

[node name="question" type="Label" parent="questionaire/Q1"]
margin_right = 842.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "1. What type of ammunition does the glock 17 use?"
autowrap = true
uppercase = true

[node name="CheckBox2" type="CheckBox" parent="questionaire/Q1"]
margin_top = 29.0
margin_right = 842.0
margin_bottom = 62.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.00784314, 0.737255, 0.988235, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0.27451, 1 )
custom_fonts/font = SubResource( 2 )
text = "10mm"

[node name="CheckBox" type="CheckBox" parent="questionaire/Q1"]
margin_top = 66.0
margin_right = 842.0
margin_bottom = 99.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.00784314, 0.737255, 0.988235, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0.27451, 1 )
custom_fonts/font = SubResource( 2 )
text = "9Ã—19m"

[node name="Q2" type="Node2D" parent="questionaire"]
position = Vector2( 0, 123 )

[node name="question" type="Label" parent="questionaire/Q2"]
margin_right = 842.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "2. who designed the Glock 17"
autowrap = true
uppercase = true

[node name="CheckBox2" type="CheckBox" parent="questionaire/Q2"]
margin_top = 29.0
margin_right = 842.0
margin_bottom = 62.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.00784314, 0.737255, 0.988235, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0.27451, 1 )
custom_fonts/font = SubResource( 2 )
text = "Gaston Glock"

[node name="CheckBox" type="CheckBox" parent="questionaire/Q2"]
margin_top = 66.0
margin_right = 842.0
margin_bottom = 99.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.00784314, 0.737255, 0.988235, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0.27451, 1 )
custom_fonts/font = SubResource( 2 )
text = "River Glock"

[node name="Q3" type="Node2D" parent="questionaire"]
position = Vector2( 0, 246 )

[node name="question" type="Label" parent="questionaire/Q3"]
margin_right = 842.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "3.What is the weight of Glock 17 without magazine"
autowrap = true
uppercase = true

[node name="CheckBox2" type="CheckBox" parent="questionaire/Q3"]
margin_top = 29.0
margin_right = 842.0
margin_bottom = 62.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.00784314, 0.737255, 0.988235, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0.27451, 1 )
custom_fonts/font = SubResource( 2 )
text = "625g"

[node name="CheckBox" type="CheckBox" parent="questionaire/Q3"]
margin_top = 66.0
margin_right = 842.0
margin_bottom = 99.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.00784314, 0.737255, 0.988235, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0.27451, 1 )
custom_fonts/font = SubResource( 2 )
text = "635g"

[node name="Q4" type="Node2D" parent="questionaire"]
position = Vector2( 0, 371 )

[node name="question" type="Label" parent="questionaire/Q4"]
margin_right = 842.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "4. What place the Glock 17 origin?"
autowrap = true
uppercase = true

[node name="CheckBox2" type="CheckBox" parent="questionaire/Q4"]
margin_top = 29.0
margin_right = 842.0
margin_bottom = 62.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.00784314, 0.737255, 0.988235, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0.27451, 1 )
custom_fonts/font = SubResource( 2 )
text = "Australia"

[node name="CheckBox" type="CheckBox" parent="questionaire/Q4"]
margin_top = 66.0
margin_right = 842.0
margin_bottom = 99.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.00784314, 0.737255, 0.988235, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0.27451, 1 )
custom_fonts/font = SubResource( 2 )
text = "US"

[node name="Q5" type="Node2D" parent="questionaire"]
position = Vector2( 0, 518 )

[node name="question" type="Label" parent="questionaire/Q5"]
margin_right = 842.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "5. When did the Glock 17 designed "
autowrap = true
uppercase = true

[node name="CheckBox2" type="CheckBox" parent="questionaire/Q5"]
margin_top = 29.0
margin_right = 842.0
margin_bottom = 62.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.00784314, 0.737255, 0.988235, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0.27451, 1 )
custom_fonts/font = SubResource( 2 )
text = "1979-1982"

[node name="CheckBox" type="CheckBox" parent="questionaire/Q5"]
margin_top = 66.0
margin_right = 842.0
margin_bottom = 99.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.00784314, 0.737255, 0.988235, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0.27451, 1 )
custom_fonts/font = SubResource( 2 )
text = "1978-1980"

[node name="button" type="VBoxContainer" parent="."]
visible = false
margin_left = 62.0
margin_top = 896.0
margin_right = 904.0
margin_bottom = 953.0

[node name="submit" type="Button" parent="button"]
margin_right = 842.0
margin_bottom = 57.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0.529412, 0.996078, 1 )
custom_fonts/font = SubResource( 3 )
text = "Submit"
flat = true
clip_text = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.096875
anchor_top = 0.186719
anchor_right = 0.903125
anchor_bottom = 0.742969

[node name="DisplayText" type="Label" parent="VBoxContainer"]
margin_right = 765.0
margin_bottom = 89.0
size_flags_vertical = 5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Questions
"
align = 3
valign = 3
autowrap = true

[node name="Divider" type="Label" parent="VBoxContainer"]
margin_top = 93.0
margin_right = 765.0
margin_bottom = 107.0

[node name="ItemList" type="ItemList" parent="VBoxContainer"]
margin_top = 111.0
margin_right = 765.0
margin_bottom = 659.0
size_flags_vertical = 3
theme = SubResource( 8 )
items = [ "Item 0", null, false, "Item 1", null, false ]

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 663.0
margin_right = 765.0
margin_bottom = 712.0
custom_fonts/font = SubResource( 5 )
text = "Back"

[connection signal="item_selected" from="VBoxContainer/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
